...
            )
        } else {
            ScalableIconButton(
                onClick = onListButtonClicked,
                modifier = Modifier
                    .size(iconSize)
                    .semantics { contentDescription = "Menu Icon" },
                iconResId = R.drawable.ic_menu,

            )
        }
    }
}
...
