...
import com.example.harryerayaudiorecorder.ui.SamplerViewModel
import kotlinx.coroutines.delay

enum class PhoneSamplerScreen(@StringRes val title: Int) {
    Record(title = R.string.record),
    RecordingsList(title = R.string.recordings_list),
    Playback(title = R.string.playback),
    EditRecord(title = R.string.edit_recording);
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun PhoneSamplerAppBar(
...
